--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/jquery-1.11.2.js"></script>
     <script src="./js/scripts.js"></script>
-    <title>Scrabble Score</title>
+    <title></title>
   </head>
   <body>
     <div class = "container">
-      <h1>Scrabbler</h1>
+      <h1></h1>
 
       <div class="well">
         <form id="scrabbler">
           <div class = "control-group">
-            <label for="scrabble_word">Enter a word to calculate Scrabble Score</label>
+            <label for="scrabble_word"></label>
             <input type="text" id="scrabble_word">
           </div>
-          <button type="submit" class="btn btn-danger">Submit</button>
+          <button type="submit" class="btn btn-danger"></button>
         </form>
       </div>
 
       <div class="well results">
           <p>
-            Word: <span id="word"></span> Score: <span id="score"></span>
+            <span id="word"></span><span id="score"></span>
           </p>
       </div>
     </div>
