--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <div class = "container">
     <h1>Pig Dice</h1>
+    <h1>
+      <button class='btn btn-danger' id='new_game'>New Game</button>
+    </h1>
       <div class="player-squares well col-md-5">
-        <h3><span class='player_one_name'></span>Name</h3>
+        <h3><span class='player_one_name'></span></h3>
         <h4>Total Score: <span id='player_one_score'></span></h4>
+        <h5>Last Roll: <span id='player_one_last_roll'></span></h5>
         <div id='player_one_turn_area' class='turn_box well'>
           <h4><span class='player_one_name'></span>'s turn</h4>
           <h4>Turn score: <span id='player_one_turn_score'></span></h4>
@@ -22,8 +26,9 @@
       </div>
 
       <div class="player-squares well col-md-5">
-        <h3><span class='player_two_name'></span>Name</h3>
+        <h3><span class='player_two_name'></span></h3>
         <h4>Total Score: <span id='player_two_score'></span></h4>
+        <h5>Last Roll: <span id='player_two_last_roll'></span></h5>
         <div id='player_two_turn_area' class='turn_box well'>
           <h4><span class='player_two_name'></span>'s turn</h4>
           <h4>Turn score: <span id='player_two_turn_score'></span></h4>
