--- a/index.html
+++ b/index.html
@@ -8,37 +8,44 @@
     <title>Pig Dice</title>
   </head>
   <body>
-    <div class = "container">
-    <h1>Pig Dice</h1>
-    <h1>
-      <button class='btn btn-danger' id='new_game'>New Game</button>
-    </h1>
-      <div class="player-squares well col-md-5">
-        <h3><span class='player_one_name'></span></h3>
-        <h4>Total Score: <span id='player_one_score'></span></h4>
-        <h5>Last Roll: <span id='player_one_last_roll'></span></h5>
-        <div id='player_one_turn_area' class='turn_box well'>
-          <h4><span class='player_one_name'></span>'s turn</h4>
-          <h4>Turn score: <span id='player_one_turn_score'>0</span></h4>
-          <p id='player_one_dice'></p>
-          <button class='btn btn-success' id='player_one_button'>Roll Dice</button>
-          <button class='btn btn-warning pass_buttons' id='player_one_pass_button'>Pass and Keep</button>
+    <div class="container">
+      <h1>Pig Dice</h1>
+      <h1>
+        <button class='btn btn-danger' id='new_game'>New Game</button>
+      </h1>
+      <div id="table">
+        <div class="player-squares well col-md-5">
+          <h3><span class='player_one_name'></span></h3>
+          <h4>Total Score: <span id='player_one_score'></span></h4>
+          <h5>Last Roll: <span id='player_one_last_roll'></span></h5>
+          <div id='player_one_turn_area' class='turn_box well'>
+            <h4><span class='player_one_name'></span>'s turn</h4>
+            <h4>Turn score: <span id='player_one_turn_score'>0</span></h4>
+            <p id='player_one_dice'></p>
+            <button class='btn btn-success' id='player_one_button'>Roll Dice</button>
+            <button class='btn btn-warning pass_buttons' id='player_one_pass_button'>Pass and Keep</button>
+          </div>
+        </div>
+
+        <div class="player-squares well col-md-5">
+          <h3><span class='player_two_name'></span></h3>
+          <h4>Total Score: <span id='player_two_score'></span></h4>
+          <h5>Last Roll: <span id='player_two_last_roll'></span></h5>
+          <div id='player_two_turn_area' class='turn_box well'>
+            <h4><span class='player_two_name'></span>'s turn</h4>
+            <h4>Turn score: <span id='player_two_turn_score'></span></h4>
+            <p id='player_two_dice'></p>
+            <button class='btn btn-success' id='player_two_button'>Roll Dice</button> 
+            <button class='btn btn-warning pass_buttons' id='player_two_pass_button'>Pass and Keep</button>
+          </div>
         </div>
       </div>
 
-      <div class="player-squares well col-md-5">
-        <h3><span class='player_two_name'></span></h3>
-        <h4>Total Score: <span id='player_two_score'></span></h4>
-        <h5>Last Roll: <span id='player_two_last_roll'></span></h5>
-        <div id='player_two_turn_area' class='turn_box well'>
-          <h4><span class='player_two_name'></span>'s turn</h4>
-          <h4>Turn score: <span id='player_two_turn_score'></span></h4>
-          <p id='player_two_dice'></p>
-          <button class='btn btn-warning' id='player_two_button'>Roll Dice</button> 
-          <button class='btn btn-warning pass_buttons' id='player_two_pass_button'>Pass and Keep</button>
-        </div>
-      </div>
-
+      <div class="announce_winner jumbotron">
+        <h1><span id="winner_name"></span> Wins!</h1>
+        <h3>Winner score: <span id='winner_score'></span></h3>
+        <h3>Loser score: <span id='loser_score'></span></h3>
+      <div>
     </div>
   </body>
 </html>
